# pypromice

./: .flake8  .gitignore  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CLAUDE.md  HACKING.org  L0_to_L1.org  L0_to_L1.py  L1A_to_L2.py  L1_to_L1A.py  L2_to_L3.py  MANIFEST.in  Makefile  README.md  README.org  class_template.py  environment.yml  example.toml  flags.csv  flags.org  hdr.template  promiceAWS.py  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg  setup.py  template_L0M_raw.nead  variable_names.org  variables.csv  variables.org
.github/workflows/: data_output_reporter.py  data_output_reporter.yml  dataverse_workflow.yml  joss-pdf.yml  process_l2_test.yml  process_l3_test.yml  process_test.yml  publish-pypromice-bufr.yml  publish-pypromice-ingest.yml  publish-pypromice-pipeline.yml  publish-pypromice-tx.yml  publish-pypromice.yml  pypi-publish.yml  test_version_bump.py  test_version_bump.yml  unit_test.yml  upload_to_dataverse.py  url_update.yml
IDL/: AWSdataprocessing_v3.pro  README.org
IDL/data/metadata/: EGP_metadata.csv
data/: variables.csv  variables.org
data/L0M/: README.org  template_v3_raw.nead
docs/: conf.py  guide_developer.rst  guide_technical.rst  guide_user.rst  index.rst  install.rst  modules.rst  requirements.txt  technical_data.rst  technical_process.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
fig/: pypromice.drawio  workflow.drawio
flags/: CP1.csv  DYE-2.csv  GITS.csv  KAN_U.csv  KOB.csv  MIT.csv  NASA-E.csv  NASA-SE.csv  NASA-U.csv  NUK_K.csv  Saddle.csv  SouthDome.csv  Summit.csv  SwissCamp.csv  TUNU-N.csv
package_idea/: AWS.py  correct.py  process.py  retrieve.py
paper/: paper.bib  paper.md  paper.md.backup  papers.bib
promiceAWS/: L0_to_L1.py  L1_to_L2.py  L2_to_L3.py  cf_acdd.py  merge.py  promiceAWS.py
src/PROMICE_AWS_processing/: __init__.py
src/PROMICE_AWS_processing/L0/: L0.py  L0_to_L1.py  __init__.py
src/PROMICE_AWS_processing/L1/: L1_to_L2.py  __init__.py  merge.py
src/PROMICE_AWS_processing/L2/: L2_to_L3.py  __init__.py
src/PROMICE_AWS_processing/L3/: L3.py  __init__.py
src/promiceAWS/: L0_to_L1.py  L1_to_L2.py  L2_to_L3.py  __init__.py  cf_acdd.py  merge.py  promiceAWS.py  variables.csv
src/promice_aws_processing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pypromice/: L0toL1.py  L1toL2.py  L2toL3.py  __init__.py  aws.py  data_urls.csv  example-processing.py  get.py  last_aws_uid.ini  metadata.csv  payload_formats.csv  station_configuration.py  tx.py  variables.csv
src/pypromice/algorithms/: gps.py  pressure_depth.py  write.py
src/pypromice/core/: resampling.py
src/pypromice/dataset_io/: toa5.py
src/pypromice/get/: __init__.py  get.py  get_promice_data.py
src/pypromice/ingest/: l0.py
src/pypromice/io/: positions_seed.csv  write.py
src/pypromice/operational/: aws_operational.py  fileshare.py  git_repository_utils.py  multiprocessing_utils.py  station_status.py
src/pypromice/pipeline/: L0toL1.py  L1toL2.py  L2toL3.py  __init__.py  aws.py  get_l2.py  get_l2tol3.py  join_l2.py  join_l3.py  l0_to_l1.py  l1_to_l2.py  l2_to_l3.py  resample.py  utilities.py
src/pypromice/postprocess/: __init__.py  args.py  bufr_to_csv.py  bufr_upload.py  bufr_utilities.py  bufr_variables_readme.csv  create_bufr_files.py  csv2bufr.py  get_bufr.py  make_metadata_csv.py  metadata_stations.csv  real_time_utilities.py  station_configurations.toml  station_dimensions.csv  variables_bufr.csv  wmo_config.py
src/pypromice/process/: L0toL1.py  L1toL2.py  L2toL3.py  __init__.py  attributes.py  aws.py  boom_height.py  get_l2.py  get_l2tol3.py  get_l3.py  get_l3_new.py  gps.py  join_l2.py  join_l3.py  join_levels.py  l2_to_l3.py  load.py  metadata.csv  pressure_depth.py  promiceAWS.py  resample.py  test.py  tilt.py  utilities.py  value_clipping.py  variables.csv  wind.py  write.py
src/pypromice/qc/: compute_percentiles.py  difference.py  difference_test.py  github_data_issues.py  percentiles.db  persistence.py  persistence_test.py  static_qc.py  static_qc_test.py
src/pypromice/resources/: __init__.py  file_attributes.csv  payload_formats.csv  payload_types.csv  variable_aliases_GC-Net.csv  variable_aliases_GlacioBasis.csv  variables.csv
src/pypromice/ressources/: variable_aliases_GC-Net.csv  variable_description.csv  variable_processing_info.csv  variables.csv
src/pypromice/test/: test_config.toml  test_config1.toml  test_config2.toml  test_payload_formats.csv  test_percentile.py  test_raw1.txt  test_raw_DataTable2.txt  test_raw_SlimTableMem1.txt  test_raw_transmitted.txt  test_raw_transmitted1.txt  test_raw_transmitted2.txt  test_regression.py
src/pypromice/tx/: __init__.py  getL0tx_station.py  get_l0tx.py  get_l0tx_new.py  get_msg.py  get_watsontx.py  gmail_client.py  iridium.py  process.py  (+7 more)
template/: headers.csv  headers_v3_raw.nead
test_data/: awsdataprocessing_gdl_v3.pro
test_data/conf/: KPC_L.toml
test_data/input/: KPC_L_2019_raw_transmitted.txt
test_data/metadata/: KPC_L_metadata.csv  KPC_L_metadata_TX.csv  QAS_L_metadata.csv  QAS_M_metadata.csv  QAS_U_metadata.csv
test_data/output/: KPC_L_day_v03.txt  KPC_L_month_v03.txt
test_data/processed_data/: QAS_L_day_v03.txt
tests/: utilities.py
tests/data/: test_config1.toml  test_config1_raw.toml  test_config1_tx.toml  test_config2.toml  test_config2_raw.toml  test_config2_tx.toml  test_email  test_payload_types.csv  test_raw1.txt  test_raw_DataTable2.txt  test_raw_SlimTableMem1.txt  test_raw_transmitted1.txt
tests/e2e/: test_get_l2.py  test_mail_ingest.py  test_process.py  test_resample.py
tests/unit/: test_completeness_filter.py  test_l1tol2.py  test_percentile.py  test_rate_of_change_filter.py  test_station_config.py  test_value_clippping.py  tx.py
tests/variables/: test_air_temperature.py  test_gps.py  test_humidity.py  test_precipitation.py  test_radiation.py  test_station_boom_height.py  test_station_pose.py  test_wind.py
(+118 files in other folders)
