# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = promice_AWS_processing
description = PROMICE AWS processing
author = Kenneth D. Mankoff
author_email = kdm@geus.dk
license = lgpl3
long_description = file: README.org
long_description_content_type = text/org; charset=UTF-8
url = https://github.com/GEUS-Glaciology-and-Climate/PROMICE-AWS-processing
project_urls =
    Bug Tracker = https://github.com/GEUS-Glaciology-and-Climate/PROMICE-AWS-processing/issues
    Documentation = https://github.com/GEUS-Glaciology-and-Climate/PROMICE-AWS-processing
    Source Code = https://github.com/GEUS-Glaciology-and-Climate/PROMICE-AWS-processing
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux,Mac
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =promiceAWS

# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires = numpy; pandas; xarray; toml
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.8

[options.packages.find]
where = promiceAWS
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install promice[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = promice.module:function
# For example:
# console_scripts =
#     fibonacci = promice.skeleton:run
# And any other entry points, for example:

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov promice --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

